--- a/index.html
+++ b/index.html
@@ -1,9 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- <title>
-  Taylor Swift  
- </title>
- <meta charset="UTF-8" content="keywords" name="Document">
- <link href="./style.css" rel="stylesheet">
+    <title>
+     Document  
+    </title>
+    <meta charset="UTF-8" content="keywords" name="Document">
+    <link href="./style.css" rel="stylesheet">
 </head>
+<main>
+    <div class="content">
+        <section class="float-section clearfix">
+            <div class="wrapper">
+                <div class="floats clearfix">
+                    <div class="float-box1">1</div>
+                    <div class="float-box1">2</div> 
+                </div>
+            </div>
+        </section>
+        <section class="float-section">
+            <div class="wrapper">
+                <div class="floats2 clearfix">
+                   <div class="float-box2">1</div>
+                   <div class="float-box2">5</div>
+                   <div class="float-box2">4</div>
+                   <div class="float-box2">3</div>
+                   <div class="float-box2">2</div>
+                   <div class="clearfix"></div>
+                </div>
+            </div>
+        </section>
+        <section class="float-section clearfix">
+            <div class="wrapper">
+                <div class="floats3 clearfix">
+                   <div class="float-box3">1</div>
+                   <div class="float-box4">2</div>
+                   <div class="float-box6">4</div>
+                   <div class="float-box5">3</div>
+                   <div class="clearfix"></div>
+                </div>
+            </div>
+        </section>
+    </div>
+</main>
