--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link href="./style.css" rel="stylesheet">
 </head>
 <main>
-    <div class="content">
-        <section class="float-section clearfix">
+    <section class="content clearfix">
+        <section class="float-section">
             <div class="wrapper">
                 <div class="floats clearfix">
                     <div class="float-box1">1</div>
@@ -20,25 +20,31 @@
         <section class="float-section">
             <div class="wrapper">
                 <div class="floats2 clearfix">
-                   <div class="float-box2">1</div>
-                   <div class="float-box2">5</div>
-                   <div class="float-box2">4</div>
-                   <div class="float-box2">3</div>
-                   <div class="float-box2">2</div>
-                   <div class="clearfix"></div>
+                    <div class="left clearfix">
+                       <div class="float-box2-left">1</div>
+                    </div>
+                    <div class="right clearfix">
+                        <div class="float-box2">2</div>
+                        <div class="float-box2">3</div>
+                        <div class="float-box2">4</div>
+                        <div class="float-box2">5</div>
+                    </div>
                 </div>
             </div>
         </section>
-        <section class="float-section clearfix">
+        <section class="float-section">
             <div class="wrapper">
                 <div class="floats3 clearfix">
-                   <div class="float-box3">1</div>
-                   <div class="float-box4">2</div>
-                   <div class="float-box6">4</div>
-                   <div class="float-box5">3</div>
-                   <div class="clearfix"></div>
+                   <div class="left clearfix">
+                       <div class="float-box3">1</div>
+                       <div class="float-box3">2</div>
+                   </div>
+                   <div class="right clearfix">
+                       <div class="float-box3">3</div>
+                       <div class="float-box3">4</div>
+                   </div>
                 </div>
             </div>
         </section>
-    </div>
+    </section>
 </main>
