--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <title>
      Document  
     </title>
-    <meta charset="UTF-8" content="keywords" name="Document">
+    <meta charset="UTF-8">
+    <meta content="keywords" name="Document">
     <link href="./style.css" rel="stylesheet">
 </head>
 <main>
